refactor: rename stockCode to symbol in DelistedStocks and update StockItemTest for clarity